# fureainomachi_backend

./: .gitignore  Makefile  README.md  alembic.ini  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
alembic/: env.py
app/: main.py
app/core/: error_handlers.py  handlers.py  logger.py  response.py
app/db/: database.py  seed.py
app/db/dummy_data/: posts.py  users.py
app/enums/: country.py  gender.py  language.py
app/models/: posts.py  posts_model.py  users_model.py
app/routers/: chat_router.py  posts.py  posts_router.py  users_router.py
app/schemas/: posts.py  posts_schema.py  users_schema.py
app/services/: chat_service.py  posts.py  posts_service.py  users_service.py
app/utils/: validate.py
tests/test_core/: test_error_handlers.py
tests/test_routers/: test_posts_router.py  test_users_router.py
tests/test_services/: test_posts_service.py  test_users_service.py
tests/test_utils/: test_validate.py
