[metadata]
name = fureainomachi_backend
version = 0.1.0
description = Fureai no Machi Backend
author = Shio

[flake8]
max-line-length = 88
# E203：Whitespace before ':', Black と競合
# W503：Line break before binary operator, Black と競合
# W504：Line break after binary operator, Black と競合
# F403：from module import * used; optional
# F401：imported but unused; optional (場合によって有効化)
ignore =
    E203,
    W503,
    W504,
    F403,
    F401
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    env,
    venv,
    migrations,
    alembic
# 関数やメソッドの複雑度制限
max-complexity = 10
# 出力フォーマット:標準出力形式
format = default

[tool:pytest]
pythonpath = .

[isort]
profile = black
line_length = 88
# 複数行の import の整形スタイル：Vertical Hanging Indent
multi_line_output = 3
# 複数行 import の最後の要素にカンマを付ける
include_trailing_comma = True
# グリッド整列を強制する行数：強制しない
force_grid_wrap = 0
# 複数行 import をカッコ () で囲む
use_parentheses = True
# コメント前に改行を入れる
ensure_newline_before_comments = True
skip =
    .venv
    env
    venv
    migrations

[mypy]
python_version = 3.11
# 型情報がない外部ライブラリの import を無視する
ignore_missing_imports = True
# 厳格モード：型注釈のない関数を警告、型注釈のない関数の呼び出しを警告、型注釈がない関数内部もチェック、None を許容する場合は明示的にする
strict = False
exclude =
    alembic